widen logo box to 100% to prevent overlap on smaller screen widths

--- a/src/Contact.css
+++ b/src/Contact.css
@@ -22,5 +22,5 @@ a {
 #logo-box {
   display: flex;
   justify-content: center;
-  width: 50%;
+  width: 100%;
 }
